added hover effects to project cards

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,92 @@
 html, body {
   height: 100%;
 }
+.cardcontainer {
+  position: relative;
+  -webkit-perspective: 600px;
+  perspective: 600px;
+}
+.item {
+  display: inline-block;
+  position: relative;
+  border-radius: 2px;
+  width: 100%;
+  -webkit-animation: animOpp 0.4s 1;
+  animation: animOpp 0.4s 1;
+}
+.item:hover {
+  -webkit-animation: anim ease-out 0.5s 1;
+  animation: anim 0.5s 1;
+  transform: translateZ(30px);
+  cursor: pointer;
+}
+.item:active {
+  -webkit-transform: translateZ(26px);
+  transform: translateZ(26px);
+}
+@-webkit-keyframes anim {
+  0% {
+    transform: rotateX(0deg) translateZ(0px);
+  }
+  25% {
+    transform: rotateX(-4deg) translateZ(15px);
+  }
+  37% {
+    transform: rotateX(-8deg) translateZ(30px);
+    transform-origin: 50% 0%;
+  }
+  72% {
+    transform-origin: 50% 0%;
+    transform: rotateX(-4deg) translateZ(30px);
+  }
+  100% {
+    transform-origin: 50% 0%;
+    transform: rotateX(0deg) translateZ(30px);
+  }
+}
+
+@-moz-keyframes anim {
+  0% {
+    transform: rotateX(0deg) translateZ(0px);
+  }
+  25% {
+    transform: rotateX(-4deg) translateZ(15px);
+  }
+  37% {
+    transform: rotateX(-8deg) translateZ(30px);
+    transform-origin: 50% 0%;
+  }
+  72% {
+    transform-origin: 50% 0%;
+    transform: rotateX(-4deg) translateZ(30px);
+  }
+  100% {
+    transform-origin: 50% 0%;
+    transform: rotateX(0deg) translateZ(30px);
+  }
+}
+@-webkit-keyframes animOpp {
+  0% {
+    transform: translateZ(30px);
+  }
+  35% {
+    transform: translateZ(20px);
+  }
+  100% {
+    transform: translateZ(0px);
+  }
+}
+@-moz-keyframes animOpp {
+  0% {
+    transform: translateZ(30px);
+  }
+  35% {
+    transform: translateZ(20px);
+  }
+  100% {
+    transform: translateZ(0px);
+  }
+}
 
 .menuitemhide{
   display:none;
