--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,14 @@ html, body {
   -webkit-animation: animOpp 0.4s 1;
   animation: animOpp 0.4s 1;
 }
+
+.itemnohover {
+  display: inline-block;
+  position: relative;
+  border-radius: 2px;
+  width: 100%;
+}
+
 .item:hover {
   -webkit-animation: anim ease-out 0.5s 1;
   animation: anim 0.5s 1;
