--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400);
 body {
     background: rgb(44, 62, 80); 
     font: normal 100% Lato, sans-serif;
